# EmEngine

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  flake.nix
.github/workflows/: emcmake.yml
cmake/: BasePresets.json
exts/: CMakeLists.txt
resources/: map.txt  scene.yaml
resources/Models/gltf/: untitled.glb
resources/Models/gltf/Running/: running.glb  running2.glb
resources/Scripts/: generate_bindings.py
resources/Shaders/: Fxaa.frag  background.frag  background.vert  bloomCombine.frag  bloomDown.frag  bloomUp.frag  brdf.frag  cubeMap.vert  debugLine.frag  debugLine.vert  debugLineFragment.glsl  equirectangularToCubemap.frag  extractBright.frag  fragment.glsl  irradiance.frag  light.vert  mesh.vert  meshFragment.glsl  meshVertex.glsl  particle.frag  particle.vert  pbrLight.frag  pbrLightFragment.glsl  pbrMesh.frag  prefilter.frag  quad.vert  shadow.frag  shadow.vert  shadowVertex.glsl
resources/ui/: main_menu.rcss  main_menu.rml
src/Engine/: CMakeLists.txt  Core.cpp  Core.hpp  GameStateManager.cpp  GameStateManager.hpp  Gui.cpp  Gui.hpp  InputManager.cpp  InputManager.hpp  MapLoader.cpp  MapLoader.hpp  Profiler.hpp  ResourceManager.cpp  ResourceManager.hpp  SceneLoader.cpp  SceneLoader.hpp  Singleton.hpp  UIManager.cpp  UIManager.hpp  Window.cpp  Window.hpp  engine_pch.hpp
src/Engine/Audio/: AudioDecoders.cpp
src/Engine/ECS/: ComponentPool.hpp  ECSManager.cpp  ECSManager.hpp
src/Engine/ECS/Components/: AnimationComponent.hpp  AudioSourceComponent.cpp  AudioSourceComponent.hpp  CameraComponent.hpp  Component.hpp  DebugComponent.hpp  GraphicsComponent.hpp  LightingComponent.hpp  ParticlesComponent.hpp  PhysicsComponent.cpp  PhysicsComponent.hpp  PositionComponent.hpp
src/Engine/ECS/Systems/: AnimationSystem.cpp  AnimationSystem.hpp  AudioSystem.cpp  AudioSystem.hpp  CameraSystem.cpp  CameraSystem.hpp  GraphicsSystem.cpp  GraphicsSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  PhysicsLayers.hpp  PhysicsSystem.cpp  PhysicsSystem.hpp  PositionSystem.cpp  PositionSystem.hpp  System.hpp
src/Engine/Graphics/: CommandBuffer.cpp  CommandBuffer.hpp  GraphicsDevice.cpp  GraphicsDevice.hpp  GraphicsTypes.hpp  Handle.hpp  RenderResources.cpp  RenderResources.hpp  UBOStructs.hpp
src/Engine/Graphics/Backends/GLES3/: Device.cpp  Device.hpp  Resources.hpp
src/Engine/Graphics/Resources/: Buffer.hpp  Framebuffer.hpp  Pipeline.hpp  Renderbuffer.hpp  Sampler.hpp  Shader.hpp  Texture.hpp
src/Engine/Managers/: FrameBufferManager.cpp  FrameBufferManager.hpp  TextureManager.cpp  TextureManager.hpp
src/Engine/Objects/: Cube.cpp  Cube.hpp  GltfObject.cpp  GltfObject.hpp  GraphicsObject.cpp  GraphicsObject.hpp  Heightmap.cpp  Heightmap.hpp  Line.cpp  Line.hpp  Point.cpp  Point.hpp  Quad.cpp  Quad.hpp
src/Engine/RenderPasses/: BloomPass.cpp  BloomPass.hpp  CubeMapPass.cpp  CubeMapPass.hpp  DebugPass.cpp  DebugPass.hpp  FrameGraph.cpp  FrameGraph.hpp  FxaaPass.cpp  FxaaPass.hpp  GeometryPass.cpp  GeometryPass.hpp  LightPass.cpp  LightPass.hpp  LightingUtil.hpp  ParticlePass.cpp  ParticlePass.hpp  RenderPass.cpp  RenderPass.hpp  RenderUtil.hpp  ShadowPass.cpp  ShadowPass.hpp
src/Engine/Rendering/: Animation.cpp  Animation.hpp  DebugDrawer.cpp  DebugDrawer.hpp  Material.cpp  Material.hpp  Mesh.hpp  Node.hpp  Primitive.cpp  Primitive.hpp  Skin.hpp
src/Engine/Resources/: TextureResource.hpp
src/Engine/ShaderPrograms/: QuadShaderProgram.cpp  QuadShaderProgram.hpp  ShaderProgram.cpp  ShaderProgram.hpp
src/Engine/Types/: LightTypes.hpp
src/Engine/include/: engine_api.hpp
src/Game/: CMakeLists.txt  FreeCameraController.cs  FunctionsSetup.cs  Game.cs  Game.csproj  Game_wasm.csproj  InputManager.cs
src/Game/Entities/: Player.cs
tests/: CMakeLists.txt  component_tests.cpp  core_tests.cpp  ecs_tests.cpp  math_tests.cpp  scene_tests.cpp  test_engine_shaders.cpp  visual_test_harness.h  visual_test_main.cpp  visual_test_utils.h
tests/scenes/: alpha_blend_mode.yaml  normal_tangent_back.yaml  normal_tangent_front.yaml  normal_tangent_top.yaml  pbr_metal_rough.yaml
